--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [tool.poetry]
 name = "suthing"
 version = "0.1.0"
@@ -5,18 +9,28 @@ description = "Small Useful Things : python package for convenient primitives"
 authors = ["Alexander Belikov <abelikov@gmail.com>"]
 license = "BSD-3-Clause"
 readme = "README.md"
+homepage = "https://github.com/growgraph/suthing"
+
+
+classifiers = [
+    "License :: OSI Approved :: BSD3  License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+]
+keywords = ["suthing", "tools"]
 
 [tool.poetry.dependencies]
 python = "^3.7.1"
+pyyaml = "^6.0"
+pandas = "1.3.5"
+
+
+
+[tool.poetry.group.test.dependencies]
 black = "^23.3.0"
 isort = "5.11.5"
 mypy = "^1.1.1"
-pyyaml = "^6.0"
-pandas = "1.3.5"
 types-pyyaml = "^6.0.12.9"
 typing-extensions = "^4.5.0"
 
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
