--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.poetry]
 name = "suthing"
-version = "0.1.0"
+version = "0.2.0"
 description = "Small Useful Things : python package for convenient primitives"
 authors = ["Alexander Belikov <abelikov@gmail.com>"]
 license = "BSD-3-Clause"
@@ -22,7 +22,7 @@ keywords = ["suthing", "tools"]
 [tool.poetry.dependencies]
 python = "^3.7.1"
 pyyaml = "^6.0"
-pandas = "1.3.5"
+pandas = "^1.3.5"
 
 
 
