--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ keywords = ["suthing", "tools"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pyyaml = "^6.0"
+pyyaml = ">=3.10"
 pandas = "^1.3.5"
 
 
