--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.poetry]
 name = "suthing"
-version = "0.2.0"
+version = "0.2.1"
 description = "Small Useful Things : python package for convenient primitives"
 authors = ["Alexander Belikov <abelikov@gmail.com>"]
 license = "BSD-3-Clause"
@@ -20,17 +20,18 @@ classifiers = [
 keywords = ["suthing", "tools"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 pyyaml = ">=3.10"
 pandas = "^1.3.5"
 
 
 
-[tool.poetry.group.test.dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 isort = "5.11.5"
 mypy = "^1.1.1"
 types-pyyaml = "^6.0.12.9"
 typing-extensions = "^4.5.0"
+pandas-stubs = "^2.0.2.230605"
 
 
