--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,26 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
+requires = ["setuptools>=61.0.0", "wheel"]
 
 [tool.poetry]
-name = "suthing"
-version = "0.2.1"
-description = "Small Useful Things : python package for convenient primitives"
 authors = ["Alexander Belikov <abelikov@gmail.com>"]
-license = "BSD-3-Clause"
-readme = "README.md"
-homepage = "https://github.com/growgraph/suthing"
-
-
 classifiers = [
-    "License :: OSI Approved :: BSD3  License",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: BSD3  License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python"
 ]
+description = "Small Useful Things : python package for convenient primitives"
+homepage = "https://github.com/growgraph/suthing"
 keywords = ["suthing", "tools"]
+license = "BSD-3-Clause"
+name = "suthing"
+readme = "README.md"
+version = "0.2.1"
 
 [tool.poetry.dependencies]
+pandas = "^2.0.3"
 python = "^3.9"
 pyyaml = ">=3.10"
-pandas = "^1.3.5"
-
-
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.3.0"
-isort = "5.11.5"
-mypy = "^1.1.1"
-types-pyyaml = "^6.0.12.9"
-typing-extensions = "^4.5.0"
-pandas-stubs = "^2.0.2.230605"
-
-
+pre-commit = "^3.3.3"
