--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,12 @@ keywords = ["suthing", "tools"]
 license = "BSD-3-Clause"
 name = "suthing"
 readme = "README.md"
-version = "0.2.2"
+version = "0.2.3"
 
 [tool.poetry.dependencies]
 pandas = "^2.0.3"
-python = "^3.9"
+pytest = "^7.4.0"
+python = "^3.10"
 pyyaml = ">=3.10"
 
 [tool.poetry.group.dev.dependencies]
