added reading .env

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 build-backend = "setuptools.build_meta"
 requires = ["setuptools>=61.0.0", "wheel"]
 
+[tool.mypy]
+ignore_missing_imports = true
+
 [tool.poetry]
 authors = ["Alexander Belikov <abelikov@gmail.com>"]
 classifiers = [
@@ -15,12 +18,13 @@ keywords = ["suthing", "tools"]
 license = "BSD-3-Clause"
 name = "suthing"
 readme = "README.md"
-version = "0.2.3"
+version = "0.2.4"
 
 [tool.poetry.dependencies]
 pandas = "^2.0.3"
 pytest = "^7.4.0"
 python = "^3.10"
+python-dotenv = "^1.0.0"
 pyyaml = ">=3.10"
 
 [tool.poetry.group.dev.dependencies]
