--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,49 +1,47 @@
 fail_fast: false
 
 repos:
--   repo: https://github.com/myint/autoflake
-    rev: v2.2.0
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.14
     hooks:
-    -   id: autoflake
-        args:
-        -   --in-place
-#        -   --remove-unused-variables
-#        -   --remove-all-unused-imports
-
--   repo: https://github.com/ambv/black
-    rev: 23.7.0
+    -   id: ruff
+        args: [--fix, --ignore, E722, --exclude, "__init__.py"]
+    -   id: ruff-format
+-   repo: local
     hooks:
-    -   id: black
-        args: [--preview, -l 79]
-
+    -   id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        types: [python]
+        args: ["-rn", "-sn", "--output-format=colorized", "--errors-only", "--jobs", "4", "--rcfile=.pylintrc"]
 -   repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
     -   id: isort
         args:
         -   --line-length=79
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.5.1
+    rev: v1.8.0
     hooks:
     -   id: mypy
-        exclude: (^test/)
         args: [--show-error-codes]
         additional_dependencies: [types-requests, types-python-dateutil, types-waitress, types-PyYAML, pandas-stubs]
 -   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-    rev: v2.10.0
+    rev: v2.12.0
     hooks:
     -   id: pretty-format-yaml
         args: [--autofix, --indent, '4', --preserve-quotes]
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
     -   id: pretty-format-json
-        exclude: .*jsonld$
         args: [--autofix, --indent, '4', --no-sort-keys]
+        files: ^(?!.*jsonld)$
 
 -   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-    rev: v2.10.0
+    rev: v2.12.0
     hooks:
     -   id: pretty-format-toml
         args: [--autofix]
