--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ keywords = ["suthing", "tools"]
 license = "BSD-3-Clause"
 name = "suthing"
 readme = "README.md"
-version = "0.2.6"
+version = "0.2.7"
 
 [tool.poetry.dependencies]
 dataclass-wizard = "^0.22.2"
@@ -30,3 +30,4 @@ pyyaml = ">=3.10"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
+pylint = "^3.0.3"
