--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,14 @@ ignore_missing_imports = true
 [tool.poetry]
 authors = ["Alexander Belikov <abelikov@gmail.com>"]
 classifiers = [
-  "License :: OSI Approved :: BSD3  License",
+  "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python"
 ]
 description = "Small Useful Things : python package for convenient primitives"
 homepage = "https://github.com/growgraph/suthing"
 keywords = ["suthing", "tools"]
-license = "BSD-3-Clause"
+license = "MIT"
 name = "suthing"
 readme = "README.md"
 version = "0.3.0"
@@ -28,6 +28,7 @@ python-dotenv = "^1.0.0"
 pyyaml = ">=3.10"
 
 [tool.poetry.group.dev.dependencies]
+myst-parser = "^4.0.0"
 pre-commit = "^3.3.3"
 pylint = "^3.0.3"
 pytest = "^8.3.3"
