--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: pre-commit
+name: pytest
 
 on:
     pull_request:
@@ -6,7 +6,7 @@ on:
         branches: [main]
 
 jobs:
-    pre-commit:
+    test:
         runs-on: ubuntu-latest
         steps:
         -   uses: actions/checkout@v4
@@ -14,4 +14,9 @@ jobs:
             uses: astral-sh/setup-uv@v5
             with:
                 version: "0.6.17"
-        -   uses: pre-commit/action@v3.0.1
+        -   name: Install dependencies
+            run: |
+                uv pip install -e .
+                uv pip install pytest
+        -   name: Run pytest
+            run: pytest test
