--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -14,4 +14,7 @@ jobs:
             uses: astral-sh/setup-uv@v5
             with:
                 version: "0.6.17"
+        -   name: Install dependencies
+            run: |
+                uv sync --group dev
         -   uses: pre-commit/action@v3.0.1
