--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,7 +6,7 @@ on:
         branches: [main]
 
 jobs:
-    test:
+    pytest:
         runs-on: ubuntu-latest
         steps:
         -   uses: actions/checkout@v4
@@ -16,7 +16,8 @@ jobs:
                 version: "0.6.17"
         -   name: Install dependencies
             run: |
-                uv pip install -e .
-                uv pip install pytest
+                uv sync --group dev
         -   name: Run pytest
-            run: pytest test
+            run: |-
+                source .venv/bin/activate
+                pytest test
