--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,14 @@ requires = ["hatchling"]
 
 [dependency-groups]
 dev = [
-  "myst-parser>=4.0.0,<5",
   "pre-commit>=3.3.3,<4",
-  "pylint>=3.0.3,<4",
   "pytest>=8.3.3,<9",
-  "setuptools>=80.1.0",
-  "sphinx-rtd-theme>=3.0.2,<4",
-  "sphinx>=8.1.3,<9"
+  "setuptools>=80.1.0"
+]
+docs = [
+  "mkdocs-material>=9.6.12",
+  "mkdocs>=1.6.1",
+  "mkdocstrings[python]>=0.29.1"
 ]
 
 [project]
