--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -5,21 +5,28 @@ on:
         -   main
         paths:
         -   'docs/**'
+        -   'mkdocs.yml'
+        -   'your-package/**' # Replace with your actual package name
     workflow_dispatch:
+
 permissions:
     contents: write
     pages: write
     id-token: write
 
 jobs:
-    build_mkdocs:
+    deploy:
         runs-on: ubuntu-latest
-
         steps:
         -   name: Checkout code
             uses: actions/checkout@v4
             with:
                 fetch-depth: 0
+
+        -   name: Set up Python
+            uses: actions/setup-python@v5
+            with:
+                python-version: '3.10'
         -   name: Install uv
             uses: astral-sh/setup-uv@v5
             with:
@@ -27,25 +34,12 @@ jobs:
         -   name: Install dependencies
             run: |
                 uv sync --group docs
-        -   run: uv run mkdocs gh-deploy --config-file mkdocs.yml --force
 
-    deploy_mkdocs:
-        needs: build_mkdocs
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        runs-on: ubuntu-latest
-        steps:
-        -   name: Checkout
-            uses: actions/checkout@v4
-            with:
-                ref: gh-pages
-        -   name: Setup Pages
-            uses: actions/configure-pages@v5
-        -   name: Upload artifact
-            uses: actions/upload-pages-artifact@v3
-            with:
-                path: '.'
-        -   name: Deploy to GitHub Pages
-            id: deployment
-            uses: actions/deploy-pages@v4
+        -   name: Configure Git
+            run: |
+                git config --global user.name "github-actions"
+                git config --global user.email "github-actions@github.com"
+
+        -   name: Deploy documentation
+            run: |-
+                uv run mkdocs gh-deploy --force
