--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ keywords = [
 license = "MIT"
 name = "suthing"
 readme = "README.md"
-requires-python = "~=3.10"
+requires-python = ">=3.11, <4"
 version = "0.4.1"
 
 [project.urls]
