--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,8 +13,8 @@ jobs:
         -   name: Install uv
             uses: astral-sh/setup-uv@v5
             with:
-                version: "0.6.17"
-        -   name: Install dependencies
-            run: |
-                uv sync --group dev
-        -   uses: pre-commit/action@v3.0.1
+                version: "0.9.5"
+        -   name: Install dependencies (including dev)
+            run: uv sync --group dev
+        -   name: Run pre-commit
+            run: uv run pre-commit run --all-files
