--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,12 +13,6 @@ repos:
     -   id: isort
         args:
         -   --line-length=79
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.15.0
-    hooks:
-    -   id: mypy
-        args: [--show-error-codes]
-        additional_dependencies: [types-requests, types-python-dateutil, types-waitress, types-PyYAML, pandas-stubs, types-setuptools]
 -   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
     rev: v2.14.0
     hooks:
@@ -42,3 +36,11 @@ repos:
     hooks:
     -   id: toml-sort
         args: [-ia]
+-   repo: local
+    hooks:
+    -   id: ty
+        name: ty check
+        entry: bash -c 'ty check suthing test'
+        language: system
+        pass_filenames: false
+        always_run: true
