--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,41 +1,15 @@
 fail_fast: false
 
 repos:
+  # Python linting and formatting
 -   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.7
+    rev: v0.14.10
     hooks:
-    -   id: ruff
-        args: [--fix, --ignore, E722, --exclude, "__init__.py"]
+    -   id: ruff-check
+        args: [--fix, --ignore, E722]
     -   id: ruff-format
--   repo: https://github.com/PyCQA/isort
-    rev: 6.0.1
-    hooks:
-    -   id: isort
-        args:
-        -   --line-length=79
--   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-    rev: v2.14.0
-    hooks:
-    -   id: pretty-format-yaml
-        args: [--autofix, --indent, '4', --preserve-quotes]
 
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
-    -   id: pretty-format-json
-        args: [--autofix, --indent, '4', --no-sort-keys]
-        files: ^(?!.*jsonld)$
-
--   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-    rev: v2.14.0
-    hooks:
-    -   id: pretty-format-toml
-        args: [--autofix]
--   repo: https://github.com/pappasam/toml-sort
-    rev: v0.24.2
-    hooks:
-    -   id: toml-sort
-        args: [-ia]
+  # Type checking
 -   repo: local
     hooks:
     -   id: ty
@@ -44,3 +18,30 @@ repos:
         language: system
         pass_filenames: false
         always_run: true
+
+  # YAML formatting
+-   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+    rev: v2.15.0
+    hooks:
+    -   id: pretty-format-yaml
+        args: [--autofix, --indent, '4', --preserve-quotes]
+
+  # JSON formatting
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v6.0.0
+    hooks:
+    -   id: pretty-format-json
+        args: [--autofix, --indent, '4', --no-sort-keys]
+        exclude: \.jsonld$
+
+  # TOML formatting and sorting
+-   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+    rev: v2.15.0
+    hooks:
+    -   id: pretty-format-toml
+        args: [--autofix]
+-   repo: https://github.com/pappasam/toml-sort
+    rev: v0.24.3
+    hooks:
+    -   id: toml-sort
+        args: [-ia]
